# vrelnir_localization

./: .env  .gitattributes  .gitignore  README.md  build.py  consts.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: Build-I18N-Json.yml  dol-beta-lastest.yml  dol-beta-latest.yml  dol-compile.yml
data/: blacklists.json  ignores.json  rules.json  whitelists.json
data/jsmodule/: format.js
data/json/: blacklists.json  mod.json  variables_notations.json  whitelists.json
src/: __init__.py  _old_parse_text.py  consts.py  download.py  log.py  mod_dol.py  paratranz.py  parse_text.py  project_dol.py  utils.py
src/_wip_parse_texts/: consts.py  log.py  main.py
src/ast/: __init__.py  acorn.py
src/ast/twee/: __init__.py  lexer.py  sugarcube_lexer.py
src/ast/twee/sugarcube-2/: arguments.py  (+2 more)
src/ast_javascript/: acorn.py
src/core/: consts.py  parse_text.py  project_dol.py  utils.py
src/gui/: __init__.py
src/mods/: __init__.py
src/parse_texts/: __init__.py  _parse.py  consts.py  main.py
src/tools/: __init__.py  cant_replace_variables.json  fetch_all_variables.py  process_changelog.py  test_saves.py
src/tools/build_release/: consts.py  download.py  run_build.py  run_credits.py  run_download_html.py
src/tools/changelog_process/: main.py
src/tools/credits/: credits.py  main.py
src/tools/process_changelog/: main.py
src/tools/process_variables/: __init__.py  main.py
src/tools/shear_duplication_dict/: __init__.py  main.py
src/tools/transfer_fetching_process/: __init__.py  main.py
src/tools/variables_process/: main.py
(+5 files in other folders)
